[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://enemy/enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.6
mid_height = 2.081

[sub_resource type="CylinderShape" id=2]
radius = 0.624786
height = 0.694909

[sub_resource type="Curve3D" id=3]
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[node name="enemy" type="KinematicBody"]
collision_mask = 2
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.13506, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00517917, 1.96015, 0.61957 )
texture = ExtResource( 1 )

[node name="check_wall_down_side" type="RayCast" parent="."]
enabled = true

[node name="check_wall_up_side" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.74368, 0 )
enabled = true

[node name="detect_area" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="detect_area"]

[node name="chase_area" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="chase_area"]

[node name="nav_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="chase_limit_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Label" type="Label" parent="."]
margin_right = 126.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Path" type="Path" parent="."]
curve = SubResource( 3 )
[connection signal="body_entered" from="detect_area" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="detect_area" to="." method="_on_detect_body_exited"]
[connection signal="body_entered" from="chase_area" to="." method="_on_chase_area_body_entered"]
[connection signal="body_exited" from="chase_area" to="." method="_on_chase_area_body_exited"]
[connection signal="timeout" from="nav_timer" to="." method="nav_path_update"]
[connection signal="timeout" from="chase_limit_timer" to="." method="chase_limit_timer_timeout"]
